# sinter_lang

./: .gitignore  BUILD  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-sinter_lang  bazel-testlogs  benchmark.sh  requirements.txt  test_compiler.py
compiler/: __init__.py  main.py
compiler/codegen/: __init__.py  codegen.py
compiler/lexer/: __init__.py  lexer.py
compiler/parser/: __init__.py  parser.py
compiler/runtime/: __init__.py  dstring.py  serialization.py
compiler/semantic/: __init__.py  analyzer.py  pointer_validator.py
compiler/sinter_ast/: __init__.py  nodes.py
compiler/sinter_types/: __init__.py  symbol_table.py  types.py
docs/: LANGUAGE_GUIDE.md  QUICK_REFERENCE.md
examples/: counter.cpp  counter.sinter  dstring_demo  dstring_demo.sinter  dstring_test  dstring_test.sinter  features_demo.sinter  fibonacci.cpp  fibonacci.sinter  field_init_test.sinter  hospital.sinter  showcase.sinter
